@@ -4,6 +4,10 @@ Changelog
 2.1.6 - unreleased
 ------------------
 
+- Made our mock queryUtility in the tests more life like.  This avoids
+  test failures in combination with zope.pagetemplate 3.6.0 or higher.
+  [maurits]
+
 
 2.1.5 - 2011-12-22
 ------------------
